2012-06-19  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.20.

	* src/usb_desc.c (gnukStringSerial): Updated.

2012-06-18  Niibe Yutaka  <gniibe@fsij.org>

	LED display output change.
	* src/main.c (MAIN_TIMEOUT_INTERVAL): New.
	(LED_TIMEOUT_INTERVAL, etc.): New values.
	(main_mode, display_interaction): Remove.
	(led_inverted, emit_led): New.
	(display_status_code): Use emit_led.
	(led_blink): Use LED_* for SPEC.
	(main, fatal): New LED display output.
	* src/gnuk.h (LED_ONESHOT, LED_TWOSHOTS, LED_SHOW_STATUS)
	(LED_START_COMMAND, LED_FINISH_COMMAND, LED_FATAL): New semantics.
	(main_thread): Remove.
	* src/openpgp-do.c (gpg_do_keygen): Don't touch LED here.
	* src/openpgp.c (get_pinpad_input): Call led_blink.
	(cmd_pso, cmd_internal_authenticate): Don't touch LED here.
	(GPGthread): Call led_blink.
	* src/pin-cir.c (pinpad_getline): Change arg of led_blink.
	* src/pin-dnd.c (pinpad_getline): Ditto.
	* src/usb-icc.c (icc_handle_timeout): Ditto.
	(icc_send_status): Call led_blink.
	* src/usb_ctrl.c (gnuk_usb_event): Don't touch LED here.

2012-06-16  Niibe Yutaka  <gniibe@fsij.org>

	Use SHA256 format for "external authenticate".
	* tool/gnuk_upgrade.py (gpg_sign): SHA256 sign by "SCD PKAUTH".
	(main): Not specify keygrip, but always use key for authentication.
	* src/call-rsa.c (rsa_verify): It is SHA256 format (was: SHA1).
	* src/openpgp.c (cmd_get_challenge): Don't add chip-id prefix.
	(cmd_external_authenticate): Likewise.

2012-06-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/random.c (random_bytes_free): Clear out random bytes.

	More protection improvements.
	* src/random.c (RANDOM_BYTES_LENGTH): It's 32 now (was: 16).
	* src/gnuk.h (struct key_data_internal): Remove check, random,
	magic.  Add checksum.
	(struct prvkey_data): Remove crm_encrypted.  Add iv and
	checksum_encrypted.
	* src/openpgp-do.c (encrypt, decrypt): Add IV argument.
	(encrypt_dek, decrypt_dek): New.  It's in ECB mode.
	(compute_key_data_checksum): New.