@@ -1,0 +1,2 @@
+These assembler program are source code of program fragments in
+stlinkv2.py.
